--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <h1>Votalperrico</h1>
-    <button id="add-1-perrico">Añadir 1 perrico más</button> <button>Añadir 5 perricos más</button>
+    <button id="add-1-perrico">Añadir 1 perrico más</button> <button id="add-5-perrico">Añadir 5 perricos más</button> 
+    <button id="perrico-lucas">Lucas</button> <button id="perrico-mierdon">Mierdón</button> <button id="perrico-ramon">Ramon</button>
     <div id="dog-list"></div>
   </body>
   <script src="./index.js"></script>
