--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
   </head>
   <body>
     <h1>Votalperrico</h1>
-    <button id="add-1-perrico">Añadir 1 perrico más</button> <button id="add-5-perrico">Añadir 5 perricos más</button> 
-    <button id="perrico-lucas">Lucas</button> <button id="perrico-mierdon">Mierdón</button> <button id="perrico-ramon">Ramon</button>
+    <div class="anyadir-perricos"> 
+      <button id="add-1-perrico" class="btn-perricos">Añadir 1 perrico</button> 
+      <button id="add-5-perrico" class="btn-perricos">Añadir 5 perricos</button> 
+    </div>
+    <div class="name-perricos">
+      <button id="perrico-lucas" class="btn-perricos">Princesita</button> 
+      <button id="perrico-mierdon" class="btn-perricos">Mierdon</button> 
+      <button id="perrico-ramon" class="btn-perricos">Ramon</button>
+      <button id="perrico-cuqui" class="btn-perricos">Cuqui</button>
+      <button id="perrico-turron" class="btn-perricos">Turron</button>
+    </div>
     <div id="dog-list"></div>
   </body>
   <script src="./index.js"></script>
