--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
     <h1>Votalperrico</h1>
     <div class="anyadir-perricos"> 
+      <select id="perrico-breed">
+        <option value="random"> Raza Random</option>
+      </select>
       <button id="add-1-perrico" class="btn-perricos">Añadir 1 perrico</button> 
       <button id="add-5-perrico" class="btn-perricos">Añadir 5 perricos</button> 
+      <input type="text" id="buscador" placeholder="Escribe algo..." />
     </div>
     <div class="name-perricos">
       
