--- a/app/home.html
+++ b/app/home.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./api.js"></script>
+    <script src="../api/api.js"></script>
     <title>Votalperrico</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
     <h1>Votalperrico</h1>
@@ -21,6 +21,14 @@
       
     </div>
     <div id="dog-list"></div>
+
+    <nav class="bottom-menu">
+      <ul>
+        <li><img src="#"></li>
+        <li><img src="#"></li>
+      </ul>
+    </nav>
   </body>
-  <script src="./index.js"></script>
+
+  <script src="./home.js"></script>
 </html>
