arreglos css y simplificacion de archivos

--- a/app/home.html
+++ b/app/home.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a id="cerrar-sesion">Cerrar sesión</a>
+                    <a class="topbar__container-links" id="cerrar-sesion">Cerrar sesión</a>
                 </li>
             </ul>
         </nav>
