user fav perros

--- a/app/home.html
+++ b/app/home.html
@@ -67,7 +67,7 @@
       <ul>
         <li><img src="../images/home_icon.png"></li>
         <li><img src="../images/plus_icon.png" alt="añadir contenido" id="btn-popUp-add-perrete" class="anyadir__perrete"></li>
-        <li><img src="../images/user_icon.png"></li>
+        <li><a href="perfil.html"><img src="../images/user_icon.png" ></a></li>
       </ul>
     </nav>
   </body>
