--- a/login.html
+++ b/login.html
@@ -31,11 +31,11 @@
             <div class="form-container">
                 <label for="email_user" class="label-form">Email</label>
                 <input type="email" id="email_user" class="input-form" placeholder="Introduce tu correo electronico..." required>
-                <span class="txt-error">Holaa</span>
+                <span id="error-user-email" class="error-form hidden">El email no se correcto</span>
+
                 <label for="password_user" class="label-form">Contraseña</label>
                 <input type="password" id="password_user" class="input-form" placeholder="Introduce tu contraseña">
-                
-                <span class="txt-error">Holaa</span>
+                <span id="error-user-password" class="error-form hidden">El email o la contraseña no coindicen</span>
 
                 <div class="buttons-container">
                     <button id="email-signup-btn" class="btn-form" category="negative">Regitrarse</button>
